--- a/sponsors.html
+++ b/sponsors.html
@@ -51,30 +51,119 @@
 			</nav>
       <h1 class="banner"> Sponsors</h1>
       <div class="grid">
-          <div class="item"><h1 class="sponsorName">
+				<div class="row">
+          <div class="item"  data-toggle="modal" data-target="#metacube">
+						<h1 class="sponsorName">
             Metacube
           </h1>
           <p class="prompt"> Find out more.</p>
         </div>
-          <div class="item">
+          <div class="item" data-toggle="modal" data-target="#puncch">
             <h1 class="sponsorName">
               Punchh
             </h1>
             <p class="prompt"> Find out more.</p>
           </div>
-          <div class="item">
+				</div>
+				<div class="row">
+          <div class="item" data-toggle="modal" data-target="#gemporia">
             <h1 class="sponsorName">
               Gemporia
             </h1>
             <p class="prompt"> Find out more.</p>
           </div>
-        <div class="item">
+        <div class="item" data-toggle="modal" data-target="#skoda">
           <h1 class="sponsorName">
             Skoda
           </h1>
           <p class="prompt"> Find out more.</p>
         </div>
-
+			</div>
+		</div>
+		<div class="modal fade" id="metacube" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Metacube</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+				Metacube is an IT Solutions and Services company with experience in developing enterprise applications and products for a wide spectrum of horizontal domains including global trade management, supply chain analytics, manufacturing analytics, business continuity planning, CRM, content management and eCommerce. Metacube has software product engineering services as a key focus area, and brings in successful working experience with several product companies financed by leading venture capital funds such as Kleiner Perkins, Carlyle, Mayfield, and Sequoia. Metacube has gained rich experience in building and implementing on demand applications for enterprise. Metacube has a unique experience of working on a variety of cloud infrastructures including force.com, Google and Amazon.
+				<br>
+				<a href="http://www.metacube.com/" target="_blank">Visit metacube</a>
+				<img src="Assets/images/logo_metacube.png" style="width:100%;">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="puncch" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Puncch</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Text goes here
+				<br>
+				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
+				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="gemporia" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Gemporia</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Text goes here
+				<br>
+				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
+				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="skoda" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Skoda</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Text goes here
+				<br>
+				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
+				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     <script src="Assets/js/typer.js"></script>
     <script src="team.js"></script>
     <script type="text/javascript" src="Assets/js/particles.js"></script>
