changes on sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 		<div class="modal fade" id="metacube" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Metacube</h5>
@@ -93,10 +93,10 @@
         </button>
       </div>
       <div class="modal-body">
+        <img src="Assets/images/sponsors/logo_metacube.png" style="width:100%;"><br>
 				Metacube is an IT Solutions and Services company with experience in developing enterprise applications and products for a wide spectrum of horizontal domains including global trade management, supply chain analytics, manufacturing analytics, business continuity planning, CRM, content management and eCommerce. Metacube has software product engineering services as a key focus area, and brings in successful working experience with several product companies financed by leading venture capital funds such as Kleiner Perkins, Carlyle, Mayfield, and Sequoia. Metacube has gained rich experience in building and implementing on demand applications for enterprise. Metacube has a unique experience of working on a variety of cloud infrastructures including force.com, Google and Amazon.
 				<br>
 				<a href="http://www.metacube.com/" target="_blank">Visit metacube</a>
-				<img src="Assets/images/logo_metacube.png" style="width:100%;">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
@@ -105,7 +105,7 @@
   </div>
 </div>
 <div class="modal fade" id="puncch" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Puncch</h5>
@@ -126,7 +126,7 @@
   </div>
 </div>
 <div class="modal fade" id="gemporia" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Gemporia</h5>
@@ -147,7 +147,7 @@
   </div>
 </div>
 <div class="modal fade" id="skoda" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Skoda</h5>
@@ -156,6 +156,7 @@
         </button>
       </div>
       <div class="modal-body">
+        <img src="Assets/images/sponsors/Skoda.png" style="height:40%; width:88%;"><br>
         Text goes here
 				<br>
 				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
