--- a/speakers.html
+++ b/speakers.html
@@ -65,7 +65,7 @@
               </div>
               <div class="modal-body">
                 <div>
-                  <img src="Assets/images/speakers/kaizaad-kotwal.jpg" align="centre">
+                  <img src="Assets/images/speakers/kaizaad-kotwal.jpg" style="width: 100%">
                 </div>
                 <div calss='modal-text'>
                   Naukri.com, Jeevansaathi.com, 99acres.com, Shiksha.com — there are very few of us who do not recognise these names, all undertakings of Hitesh Oberoi. CEO and MD of InfoEdge, Mr. Oberoi boasts of a degree from IIT Delhi and IIM Bangalore, even having the prestigious Ernst &amp; Young – Entrepreneur of the Year award in 2008 for Business Transformation, and today possesses the ability to create and implement ideas in a variety of fields with his versatility and creativity. He is a founder and on the Board of Directors at the highly acclaimed Ashoka University while being a part of various industry forums alike TiE post 18 years of experience in the internet industry. Truly, this business aficionado has consistently been ‘shattering’ records and boundaries with his extreme hard work, undying dedication and pure brilliance. Come witness his brilliance and shattering of limits, and expectations, this 14th December at TEDxYouth@JPIS.
