--- a/speakers.html
+++ b/speakers.html
@@ -19,7 +19,7 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="Assets/js/images.js"></script>
 	</head>
-  <body id="particles-js">
+  <body>
     <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
          <a class="navbar-brand head" href="index.html"><img src="logo.png" class="logo"></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,61 +38,44 @@
                 <li class="nav-item">
                   <a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
                 </li>
-								<li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="sponsors.html">Sponsors</a>
-								</li>
                 <li class="nav-item ">
                   <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
                 </li>
-
+                <li class="nav-item active">
+                    <a class="nav-link mt-2 ml-3 mb-2" href="#">Speakers</a>
+                </li>
             </ul>
           </div>
       </nav>
-      <div class="row">
-        <button type="button" class="cell" data-toggle="modal" data-target="#exampleModalCenter"></button>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Kaizaad Kotwal</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <div>
-                  <img src="Assets/images/speakers/kaizaad-kotwal.jpg" style="width: 100%">
-                </div>
-                <div calss='modal-text'>
-                  Naukri.com, Jeevansaathi.com, 99acres.com, Shiksha.com — there are very few of us who do not recognise these names, all undertakings of Hitesh Oberoi. CEO and MD of InfoEdge, Mr. Oberoi boasts of a degree from IIT Delhi and IIM Bangalore, even having the prestigious Ernst &amp; Young – Entrepreneur of the Year award in 2008 for Business Transformation, and today possesses the ability to create and implement ideas in a variety of fields with his versatility and creativity. He is a founder and on the Board of Directors at the highly acclaimed Ashoka University while being a part of various industry forums alike TiE post 18 years of experience in the internet industry. Truly, this business aficionado has consistently been ‘shattering’ records and boundaries with his extreme hard work, undying dedication and pure brilliance. Come witness his brilliance and shattering of limits, and expectations, this 14th December at TEDxYouth@JPIS.
-                </div>
-              </div>
-            </div>
-          </div>
+      <div class="back">
+        <div id="profile_1" class="profile_div"></div>
+        <div id="profile_2" class="profile_div"><h1 class="name">Hitesh Oberoi</h1>
+        <p class='body'>Naukri.com, Jeevansaathi.com, 99acres.com, Shiksha.com  — there are very few of us who do not recognise these names, all undertakings of Hitesh Oberoi. CEO and MD of InfoEdge, Mr. Oberoi boasts of a degree from IIT Delhi and IIM Bangalore, even having the prestigious Ernst & Young – Entrepreneur of the Year award in 2008 for Business Transformation, and today possesses the ability to create and implement ideas in a variety of fields with his versatility and creativity. He is a founder and on the Board of Directors at the highly acclaimed Ashoka University while being a part of various industry forums alike TiE post 18 years of experience in the internet industry. Truly, this business aficionado has consistently been ‘shattering’ records and boundaries with his extreme hard work, undying dedication and pure brilliance. Come witness his brilliance and shattering of limits, and expectations, this 14th December at TEDxYouth@JPIS.
+        </p>
         </div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+
+        <div id="profile_3" class="profile_div"><h1 class="name">Kaizaad Kotwal</h1>
+        <p class='body'>A director, producer, actor, designer and even a professor of theatre, film and media studies — Kaizaad Kotwal is a man of multiple talents. Producing and directing the much acclaimed ‘Vagina Monologues’ under his own company, Poor-Box Productions, while acting in blockbuster films like ‘Airlift’, Mr. Kotwal has been quintessential in bringing magnificent manifestations of artistic thought to audiences internationally. He has received numerous accolades, including an Emmy Award for Art Direction, the Griffin Society Award for Best Professor and the prestigious Karmaveer Chakra award for his work in social justice through his foundation — Make-a-difference. With over 200 productions under his belt, we cannot wait to witness the ‘shattering’ thoughts and ideas Mr. Kotwal brings to the stage of TEDxYouth@JPIS, this December 14th.  
+        </p></div>
+        <div id="profile_4" class="profile_div"></div>
+
+        <div id="profile_5" class="profile_div"></div>
+        <div id="profile_6" class="profile_div"></div>
+
+        <div id="profile_7" class="profile_div"></div>
+        <div id="profile_8" class="profile_div"></div>
+
+        <div id="profile_9" class="profile_div"></div>
+        <div id="profile_10" class="profile_div"></div>
+
+        <div id="profile_11" class="profile_div"></div>
+        <div id="profile_12" class="profile_div"></div>
       </div>
-    <br>
-    <div class="row">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="cell"></div>
-    </div>
     <script type="text/javascript" src="Assets/js/particles.js"></script>
-    <script type="text/javascript" src="Assets/js/app2.js"></script>
+    <script type="text/javascript" src="Assets/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
