--- a/speakers.html
+++ b/speakers.html
@@ -65,7 +65,7 @@
           <p class='body'>A director, producer, actor, designer and even a professor of theatre, film and media studies — Kaizaad Kotwal is a man of multiple talents. Producing and directing the much acclaimed ‘Vagina Monologues’ under his own company, Poor-Box Productions, while acting in blockbuster films like ‘Airlift’, Mr. Kotwal has been quintessential in bringing magnificent manifestations of artistic thought to audiences internationally. He has received numerous accolades, including an Emmy Award for Art Direction, the Griffin Society Award for Best Professor and the prestigious Karmaveer Chakra award for his work in social justice through his foundation — Make-a-difference. With over 200 productions under his belt, we cannot wait to witness the ‘shattering’ thoughts and ideas Mr. Kotwal brings to the stage of TEDxYouth@JPIS, this December 14th.</p>
         </div>
         <div id="profile_right" class="profile_div">
-          <img src="Assets/images/speakers/kaizaad-kotwal.jpg" style="width: 100%; height: 100%">
+          <img src="Assets/images/speakers/kaizaad-kotwal.jpg" style="height: 100%">
         </div>
 
         <div id="profile_left" class="profile_div">
@@ -77,7 +77,7 @@
         </div>
 
         <div id="profile_left" class="profile_div">
-          <img src="Assets/images/speakers/manu-chopra.jpg" style="width: 100%; height: 100%;">
+          <img src="Assets/images/speakers/manu-chopra.jpg" style="height: 100%;">
         </div>
         <div id="profile_right" class="profile_div">
           <h1 class="name">Manu Chopra</h1>
