--- a/sponsors.html
+++ b/sponsors.html
@@ -114,10 +114,10 @@
         </button>
       </div>
       <div class="modal-body">
-        Text goes here
-				<br>
-				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
-				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
+				<img src="Assets/images/sponsors/logo_punchh.png" style="width:100%;"> 
+        Headquartered in San Mateo, CA, Punchh is the world leader in innovative digital marketing products for brick and mortar retailers. The Punchh Marketing Cloud features a combination of A.I. and machine learning technologies, mobile-first expertise and omni-channel communications that are designed to dramatically increase lifetime customer value. 125+ leading global restaurant and convenience store chains, representing more than $12 billion in annual spend, utilize the Punchh platform to boost revenue by building customer relationships at every stage of the lifecycle journey: from anonymous shoppers to known customers to brand loyalists.
+        <br>
+        <!--Link goes here--><!-- <a href="" target="_blank">Prompt</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
