--- a/sponsors.html
+++ b/sponsors.html
@@ -52,7 +52,7 @@
 						</ul>
 					</div>
 			</nav>
-      <h1 class="banner"> Sponsors</h1>
+      <h1 class="banner">Sponsors</h1>
       <div class="grid">
 				<div class="row">
           <div class="item"  data-toggle="modal" data-target="#metacube">
@@ -135,7 +135,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Text goes here
+        <img src="Assets/images/sponsors/logo_gemporia.png" style="width:100%;"><br>
 				<br>
 				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
 				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
@@ -156,8 +156,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <img src="Assets/images/sponsors/Skoda.png" style="height:40%; width:88%;"><br>
-        Text goes here
+        <img src="Assets/images/sponsors/Skoda.png" style="width:60%;"><br>
 				<br>
 				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
 				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
