--- a/sponsors.html
+++ b/sponsors.html
@@ -47,7 +47,7 @@
 									<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
 								</li>
 								<li class="nav-item active">
-                  					  <a class="nav-link mt-2 ml-3 mb-2" href="#">Sponsors</a>
+                	<a class="nav-link mt-2 ml-3 mb-2" href="#">Sponsors</a>
                 </li>
 						</ul>
 					</div>
@@ -59,13 +59,13 @@
 						<h1 class="sponsorName">
             Metacube
           </h1>
-          <p class="prompt"> Find out more.</p>
+          <p class="prompt"> Programmed for excellence.</p>
         </div>
           <div class="item" data-toggle="modal" data-target="#puncch">
             <h1 class="sponsorName">
               Punchh
             </h1>
-            <p class="prompt"> Find out more.</p>
+            <p class="prompt">Mobile Engagement. Actionable Insights.</p>
           </div>
 				</div>
 				<div class="row">
@@ -73,13 +73,13 @@
             <h1 class="sponsorName">
               Gemporia
             </h1>
-            <p class="prompt"> Find out more.</p>
+            <p class="prompt">Authentic Beauty.</p>
           </div>
         <div class="item" data-toggle="modal" data-target="#skoda">
           <h1 class="sponsorName">
             Skoda
           </h1>
-          <p class="prompt"> Find out more.</p>
+          <p class="prompt">Simply Clever.</p>
         </div>
 			</div>
 		</div>
@@ -96,7 +96,6 @@
         <img src="Assets/images/sponsors/logo_metacube.png" style="width:100%;"><br>
 				Metacube is an IT Solutions and Services company with experience in developing enterprise applications and products for a wide spectrum of horizontal domains including global trade management, supply chain analytics, manufacturing analytics, business continuity planning, CRM, content management and eCommerce. Metacube has software product engineering services as a key focus area, and brings in successful working experience with several product companies financed by leading venture capital funds such as Kleiner Perkins, Carlyle, Mayfield, and Sequoia. Metacube has gained rich experience in building and implementing on demand applications for enterprise. Metacube has a unique experience of working on a variety of cloud infrastructures including force.com, Google and Amazon.
 				<br>
-				<a href="http://www.metacube.com/" target="_blank">Visit metacube</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
@@ -114,10 +113,9 @@
         </button>
       </div>
       <div class="modal-body">
-				<img src="Assets/images/sponsors/logo_punchh.png" style="width:100%;"> 
+				<img src="Assets/images/sponsors/punchh.svg" style="width:100%;">
         Headquartered in San Mateo, CA, Punchh is the world leader in innovative digital marketing products for brick and mortar retailers. The Punchh Marketing Cloud features a combination of A.I. and machine learning technologies, mobile-first expertise and omni-channel communications that are designed to dramatically increase lifetime customer value. 125+ leading global restaurant and convenience store chains, representing more than $12 billion in annual spend, utilize the Punchh platform to boost revenue by building customer relationships at every stage of the lifecycle journey: from anonymous shoppers to known customers to brand loyalists.
         <br>
-        <!--Link goes here--><!-- <a href="" target="_blank">Prompt</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
@@ -134,14 +132,13 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+			<div class="modal-body">
         <img src="Assets/images/sponsors/logo_gemporia.png" style="width:100%;"><br>
 				<br>
-				<!--Link goes here--><!-- <a href="" target="_blank">Prompt</a> -->
-				<!--Logo goes here--><!-- <img src="Assets/images/" style="width:100%;"> -->
+        </button>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-alert" data-dismiss="modal">Close</button>
+			<div class="modal-footer">
+        <button type="button" class="btn btn-alert" data-dismiss="modal" aria-label="Close">Close</button>
       </div>
     </div>
   </div>
