--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	</head>
 
 	<body>
-
       <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
   				 <a class="navbar-brand head" href="#"><img src="logo.png" class="logo"></a>
   				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,29 +32,27 @@
 								<li class="nav-item active">
 									<a class="nav-link mt-2 ml-3 mb-2" href="#">Home</a>
 								</li>
-      					<li class="nav-item ">
+      					<li class="nav-item">
           					<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
-        					</li>
-        					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
-        					</li>
-									<!-- <li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="speakers.html">Speakers</a>
-        					</li> -->
-									<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="sponsors.html">Sponsors</a>
-        					</li>
-        					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
-        					</li>
-                  <li class="nav-item ">
+      					</li>
+      					<li class="nav-item">
+        					<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
+      					</li>
+								<li class="nav-item">
+        					<a class="nav-link mt-2 ml-3 mb-2" href="speakers.html">Speakers</a>
+      					</li>
+								<li class="nav-item">
+        					<a class="nav-link mt-2 ml-3 mb-2" href="sponsors.html">Sponsors</a>
+      					</li>
+                <li class="nav-item dropdown bg-black">
+                  <a class="nav-link dropdown-toggle mt-2 ml-3 mb-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Events</a>
+                  <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                    <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
                     <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
-                  </li>
-                   <li class="nav-item ">
                     <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/15052" target="_blank">TEDxYouth@JPIS '15</a>
-                  </li>
+                  </div>
+                </li>
       				</ul>
-
       			</div>
   			</nav>
 			<div id="particles-js">
