--- a/sponsors.html
+++ b/sponsors.html
@@ -25,30 +25,30 @@
 					  <span class="navbar-toggler-icon"></span>
 					</button>
 					 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item">
 								<a class="nav-link mt-2 ml-3 mb-2" href="index.html" id="mainItem">Home</a>
 							</li>
-
 							<li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
-								</li>
-								<!-- <li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="speakers.html">Speakers</a>
-								</li> -->
-								<li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
-								</li>
-								<li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
-								</li>
-								<li class="nav-item active">
-                	<a class="nav-link mt-2 ml-3 mb-2" href="#">Sponsors</a>
-                </li>
+								<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
+							</li>
+              <li class="nav-item">
+                <a class="nav-link mt-2 ml-3 mb-2" href="speakers.html">Speakers</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link mt-2 ml-3 mb-2" href="sponsors.html">Sponsors</a>
+              </li>
+              <li class="nav-item dropdown bg-black">
+                <a class="nav-link dropdown-toggle mt-2 ml-3 mb-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Events</a>
+                <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                  <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850" target="_blank">TEDxYouth@JPIS '17</a>
+                  <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938" target="_blank">TEDxYouth@JPIS '16</a>
+                  <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/15052" target="_blank">TEDxYouth@JPIS '15</a>
+                </div>
+              </li>
 						</ul>
 					</div>
 			</nav>
