--- a/speakers.html
+++ b/speakers.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="Assets/js/images.js"></script>
+    <link rel="stylesheet" href="Assets/css/speaker.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
@@ -52,7 +53,15 @@
         </ul>
       </div>
     </nav>
-    <div class="back">
+    <div class="tiles">
+    <a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
+    <div class="details"><span class="title">Hitesh Oberoi</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a>
+    <a class="tile" href="#"><img src="Assets/images/speakers/kaizaad-kotwal.jpg"/>
+    <div class="details"><span class="title">Kaizaad Kotwal</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a>
+    <a class="tile" href="#"><img src="Assets/images/speakers/manu-chopra.jpg"/>
+    <div class="details"><span class="title">Manu Chopra</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+
+    <!-- <div class="back">
 
       <div id="profile_left" class="profile_div">
         <img src="Assets/images/speakers/hitesh-oberoi.png" style="height: 100%;">
@@ -82,11 +91,11 @@
         <h1 class="name">Manu Chopra</h1>
         <p class="body">The ‘Innovator of the Year’, as declared by the Indian President, Manu Chopra is a socially driven genius and tech wizard who is working on tackling extreme poverty in rural India by increasing access to dignified digital work, and creating a social impact through the brilliant use of technology. From having developed a patented anti-molestation device as a teenager in high school to combat increasing rape cases, to creating a hack called ‘Narada’ that brings signal connectivity and internet access to Indians in remote villages, Manu is single-handedly transforming this world for the better. He recently graduated from Stanford University, where he co-founded CS+Social Good, Stanford's first student group focused on tech & impact. He also lectured several tech-for-good courses in Stanford's CS Department. Last year alone, the students in his classes built projects that reached millions of people in 15 countries around the globe. A prodigy in his own right and a part of India’s 20 Most Brilliant Minds Under 20 by Times Of India, we eagerly wait for Manu to ‘shatter’ our perceptions of what good technology can do, this 14th of December at TEDxYouth@JPIS 2018.</p>
       </div>
-      <!-- <div id="profile_9" class="profile_div"></div>
+    <div id="profile_9" class="profile_div"></div>
       <div id="profile_10" class="profile_div"></div>
       <div id="profile_11" class="profile_div"></div>
-      <div id="profile_12" class="profile_div"></div> -->
-    </div>
+      <div id="profile_12" class="profile_div"></div>
+    </div> -->
     <script type="text/javascript" src="Assets/js/particles.js"></script>
     <script type="text/javascript" src="Assets/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
