--- a/speakers.html
+++ b/speakers.html
@@ -55,11 +55,11 @@
     </nav>
     <div class="tiles">
     <a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
-    <div class="details"><span class="title">Hitesh Oberoi</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a>
+    <div class="details"><span class="title">Hitesh Oberoi</span><span class="info">Owner - InfoEdge</span></div></a>
     <a class="tile" href="#"><img src="Assets/images/speakers/kaizaad-kotwal.jpg"/>
-    <div class="details"><span class="title">Kaizaad Kotwal</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a>
+    <div class="details"><span class="title">Kaizaad Kotwal</span><span class="info">Producer. Director. Writer.</span></div></a>
     <a class="tile" href="#"><img src="Assets/images/speakers/manu-chopra.jpg"/>
-    <div class="details"><span class="title">Manu Chopra</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">Manu Chopra</span><span class="info">AI. Computer Science.</span></div></a></div>
 
     <!-- <div class="back">
 
