--- a/speakers.html
+++ b/speakers.html
@@ -53,6 +53,7 @@
         </ul>
       </div>
     </nav>
+    <div id="particles-js">
     <div class="tiles">
     <a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
     <div class="details"><span class="title">Hitesh Oberoi</span><span class="info">Owner - InfoEdge</span></div></a>
