--- a/speakers.html
+++ b/speakers.html
@@ -54,12 +54,31 @@
       </div>
     </nav>
     <div class="tiles">
-    <a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
-    <div class="details"><span class="title">Hitesh Oberoi</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a>
-    <a class="tile" href="#"><img src="Assets/images/speakers/kaizaad-kotwal.jpg"/>
-    <div class="details"><span class="title">Kaizaad Kotwal</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a>
-    <a class="tile" href="#"><img src="Assets/images/speakers/manu-chopra.jpg"/>
-    <div class="details"><span class="title">Manu Chopra</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+			<div class="item" data-toggle="modal" data-target="#hitesh">
+				<a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
+					<div class="details">
+						<span class="title">Hitesh Oberoi</span>
+						<span class="info">Quisque vel felis lectus donec vitae dapibus magna</span>
+					</div>
+				</a>
+			</div>
+			<div class="item" data-toggle="modal" data-target="#kaizaad">
+				<a class="tile" href="#"><img src="Assets/images/speakers/kaizaad-kotwal.png"/>
+					<div class="details">
+						<span class="title">Kaizaad Kotwal</span>
+						<span class="info">Quisque vel felis lectus donec vitae dapibus magna</span>
+					</div>
+				</a>
+			</div>
+			<div class="item" data-toggle="modal" data-traget="#manu">
+				<a class="tile" href="#"><img src="Assets/images/speakers/manu-chopra.jpg"/>
+					<div class="details">
+						<span class="title">Manu Chopra</span>
+						<span class="info">Quisque vel felis lectus donec vitae dapibus magna</span>
+					</div>
+				</a>
+			</div>
+		</div>
 
     <!-- <div class="back">
 
