modal triggers added

--- a/speakers.html
+++ b/speakers.html
@@ -55,40 +55,31 @@
     </nav>
     <div id="particles-js">
     <div class="tiles">
-<<<<<<< HEAD
-			<div class="item" data-toggle="modal" data-target="#hitesh">
-				<a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
+				<div class="tile" data-toggle="modal" data-target="#hitesh">
+					<img src="Assets/images/speakers/hitesh-oberoi.png"/>
 					<div class="details">
 						<span class="title">Hitesh Oberoi</span>
-						<span class="info">Quisque vel felis lectus donec vitae dapibus magna</span>
+						<span class="info">Owner - InfoEdge</span>
 					</div>
-				</a>
-			</div>
-			<div class="item" data-toggle="modal" data-target="#kaizaad">
-				<a class="tile" href="#"><img src="Assets/images/speakers/kaizaad-kotwal.png"/>
+				</div>
+
+				<div class="tile" data-toggle="modal" data-target="#kaizaad">
+					<img src="Assets/images/speakers/kaizaad-kotwal.jpg"/>
 					<div class="details">
 						<span class="title">Kaizaad Kotwal</span>
-						<span class="info">Quisque vel felis lectus donec vitae dapibus magna</span>
+						<span class="info">Producer. Director. Writer.</span>
 					</div>
-				</a>
-			</div>
-			<div class="item" data-toggle="modal" data-traget="#manu">
-				<a class="tile" href="#"><img src="Assets/images/speakers/manu-chopra.jpg"/>
+				</div>
+
+				<div class="tile" data-toggle="modal" data-target="#manu">
+					<img src="Assets/images/speakers/manu-chopra.jpg"/>
 					<div class="details">
 						<span class="title">Manu Chopra</span>
-						<span class="info">Quisque vel felis lectus donec vitae dapibus magna</span>
+						<span class="info">AI. Computer Science.</span>
 					</div>
-				</a>
-			</div>
+				</div>
+			<!-- </div> -->
 		</div>
-=======
-    <a class="tile" href="#"><img src="Assets/images/speakers/hitesh-oberoi.png"/>
-    <div class="details"><span class="title">Hitesh Oberoi</span><span class="info">Owner - InfoEdge</span></div></a>
-    <a class="tile" href="#"><img src="Assets/images/speakers/kaizaad-kotwal.jpg"/>
-    <div class="details"><span class="title">Kaizaad Kotwal</span><span class="info">Producer. Director. Writer.</span></div></a>
-    <a class="tile" href="#"><img src="Assets/images/speakers/manu-chopra.jpg"/>
-    <div class="details"><span class="title">Manu Chopra</span><span class="info">AI. Computer Science.</span></div></a></div>
->>>>>>> 32eeb0d845d1d4fc7b864568d60a7188a97245e6
 
     <!-- <div class="back">
 
