--- a/speakers.html
+++ b/speakers.html
@@ -54,7 +54,7 @@
       </div>
     </nav>
     <div id="particles-js">
-    <div class="tiles">
+    <div class="tiles" style="margin-top: 200px">
 				<div class="tile" data-toggle="modal" data-target="#hitesh">
 					<img src="Assets/images/speakers/hitesh-oberoi.png"/>
 					<div class="details">
@@ -78,9 +78,16 @@
 						<span class="info">AI. Computer Science.</span>
 					</div>
 				</div>
+        <div class="tile" data-toggle="modal" data-target="#hitesh">
+					<img src="Assets/images/speakers/amit_lodha.jpg"/>
+					<div class="details">
+						<span class="title">Amit Lodha</span>
+						<span class="info">IPS. Novelist. Sportsperson.</span>
+					</div>
+				</div>
 		</div>
 		<!-- Modal -->
-		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="hitesh" aria-hidden="true">
+		<div class="modal fade" id="hitesh" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
@@ -90,7 +97,7 @@
 		        </button>
 		      </div>
 		      <div class="modal-body">
-		        ...
+		        <p class="modal_text">...</p>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
