--- a/speakers.html
+++ b/speakers.html
@@ -54,58 +54,109 @@
       </div>
     </nav>
     <div id="particles-js">
-    <div class="tiles" style="margin-top: 200px">
-				<div class="tile" data-toggle="modal" data-target="#hitesh">
-					<img src="Assets/images/speakers/hitesh-oberoi.png"/>
-					<div class="details">
-						<span class="title">Hitesh Oberoi</span>
-						<span class="info">Owner - InfoEdge</span>
-					</div>
-				</div>
 
-				<div class="tile" data-toggle="modal" data-target="#kaizaad">
-					<img src="Assets/images/speakers/kaizaad-kotwal.jpg"/>
-					<div class="details">
-						<span class="title">Kaizaad Kotwal</span>
-						<span class="info">Producer. Director. Writer.</span>
-					</div>
-				</div>
-
-				<div class="tile" data-toggle="modal" data-target="#manu">
-					<img src="Assets/images/speakers/manu-chopra.jpg"/>
-					<div class="details">
-						<span class="title">Manu Chopra</span>
-						<span class="info">AI. Computer Science.</span>
-					</div>
-				</div>
-        <div class="tile" data-toggle="modal" data-target="#hitesh">
-					<img src="Assets/images/speakers/amit_lodha.jpg"/>
-					<div class="details">
-						<span class="title">Amit Lodha</span>
-						<span class="info">IPS. Novelist. Sportsperson.</span>
-					</div>
-				</div>
-		</div>
+    <div class="row">
+      <div class="item" id='item1' data-toggle="modal" data-target="#hitesh">
+        <div class="inlay">
+          <h1 class="name"> Hitesh Oberoi</h1>
+          <p class="text"> Owner - InfoEdge </p>
+        </div>
+      </div>
+      <div class="item" id='item2' data-toggle="modal" data-target="#kaizaad">
+        <div class="inlay">
+          <h1 class="name">Kaizaad Kotwal</h1>
+          <p class="text">Producer. Director. Writer.</p>
+        </div>
+      </div>
+      <div class="item" id='item3'data-toggle="modal" data-target="#manu">
+        <div class="inlay">
+          <h1 class="name">Manu Chopra</h1>
+          <p class="text">AI. Computer Science.</p>
+        </div>
+      </div>
+      <div class="item" id='item4'data-toggle="modal" data-target="#amit">
+        <div class="inlay">
+          <h1 class="name">Amit Lodha</h1>
+          <p class="text">IPS. Novelist. Sportsperson.</p>
+        </div>
+      </div>
+    </div>
 		<!-- Modal -->
-		<div class="modal fade" id="hitesh" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title" id="exampleModalLabel">Hitesh Oberoi</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		        <p class="modal_text">...</p>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
+    <div class="modal fade" id="manu" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Manu Chopra</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="hitesh" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Hitesh Oberoi</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="kaizaad" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">Kaizaad Kotwal</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      ...
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    </div>
+  </div>
+</div>
+</div>
+<div class="modal fade" id="amit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">Amit Lodha</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      ...
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    </div>
+  </div>
+</div>
+</div>
 
+
+</div>
     <script type="text/javascript" src="Assets/js/particles.js"></script>
     <script type="text/javascript" src="Assets/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
