--- a/speakers.html
+++ b/speakers.html
@@ -81,6 +81,32 @@
         </div>
       </div>
     </div>
+        <div class="row">
+      <div class="item" id='item1' data-toggle="modal" data-target="#hitesh">
+        <div class="inlay">
+          <h1 class="name"> Hitesh Oberoi</h1>
+          <p class="text"> Owner - InfoEdge </p>
+        </div>
+      </div>
+      <div class="item" id='item2' data-toggle="modal" data-target="#kaizaad">
+        <div class="inlay">
+          <h1 class="name">Kaizaad Kotwal</h1>
+          <p class="text">Producer. Director. Writer.</p>
+        </div>
+      </div>
+      <div class="item" id='item3'data-toggle="modal" data-target="#manu">
+        <div class="inlay">
+          <h1 class="name">Manu Chopra</h1>
+          <p class="text">AI. Computer Science.</p>
+        </div>
+      </div>
+      <div class="item" id='item4'data-toggle="modal" data-target="#amit">
+        <div class="inlay">
+          <h1 class="name">Amit Lodha</h1>
+          <p class="text">IPS. Novelist. Sportsperson.</p>
+        </div>
+      </div>
+    </div>
 		<!-- Modal -->
     <div class="modal fade" id="manu" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
